--- a/Figure4.ipynb
+++ b/Figure4.ipynb
@@ -81,19 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run bash/load_batch_simulations.py\n",
     "RESP_PASSIVE_PER_STIM = build_full_dataset_per_stim(key='passive',\n",
@@ -104,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +153,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L23\n",
+      " 1st sample: mean+/-s.e.m.= 0.0000+/-0.0000 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 0.2800+/-0.2040 (n=10)\n",
+      "Wilcoxon: p=9.8e-03\n",
+      "\n",
+      "L4\n",
+      " 1st sample: mean+/-s.e.m.= 0.0000+/-0.0000 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 1.7800+/-0.2600 (n=10)\n",
+      "Wilcoxon: p=2.0e-03\n",
+      "\n",
+      "L4 to L23\n",
+      " 1st sample: mean+/-s.e.m.= 0.2800+/-0.2040 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 1.7800+/-0.2600 (n=10)\n",
+      "Wilcoxon: p=2.0e-03\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import wilcoxon\n",
+    "print('L23\\n', stat_results(0*np.array(SLOPES_PASSIVE['free']), np.array(SLOPES_PASSIVE['free'])))\n",
+    "print('L4\\n', stat_results(0*np.array(SLOPES_PASSIVE['chelated']), np.array(SLOPES_PASSIVE['chelated'])))\n",
+    "print('L4 to L23\\n', stat_results(np.array(SLOPES_PASSIVE['free']), np.array(SLOPES_PASSIVE['chelated'])))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +209,16 @@
       "\n",
       "L23 vs L4\n",
       " 1st sample: mean+/-s.e.m.= 112.9102+/-10.5087 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 192.9031+/-12.9839 (n=10)\n",
+      "Wilcoxon: p=2.0e-03\n",
+      "\n",
+      "L23\n",
+      " 1st sample: mean+/-s.e.m.= 0.0000+/-0.0000 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 112.9102+/-10.5087 (n=10)\n",
+      "Wilcoxon: p=2.0e-03\n",
+      "\n",
+      "L4\n",
+      " 1st sample: mean+/-s.e.m.= 0.0000+/-0.0000 (n=10)\n",
       "2ndp sample: mean+/-s.e.m.= 192.9031+/-12.9839 (n=10)\n",
       "Wilcoxon: p=2.0e-03\n",
       "\n"
@@ -210,7 +244,9 @@
     "ge.set_plot(ax, ['left'], yscale='linear', ylabel='V.s / $N_{syn}$ ', \n",
     "            tck_outward=3, tck_length=3, ylabelpad=-3)\n",
     "print('AMPA vs L23\\n', stat_results(1e3*np.array(GAIN_PASSIVE['ampa']), 1e3*np.array(GAIN_PASSIVE['free'])))\n",
-    "print('L23 vs L4\\n', stat_results(1e3*np.array(GAIN_PASSIVE['free']), 1e3*np.array(GAIN_PASSIVE['chelated'])))"
+    "print('L23 vs L4\\n', stat_results(1e3*np.array(GAIN_PASSIVE['free']), 1e3*np.array(GAIN_PASSIVE['chelated'])))\n",
+    "print('L23\\n', stat_results(0*np.array(GAIN_PASSIVE['free']), 1e3*np.array(GAIN_PASSIVE['free'])))\n",
+    "print('L4\\n', stat_results(0*np.array(GAIN_PASSIVE['free']), 1e3*np.array(GAIN_PASSIVE['chelated'])))"
    ]
   },
   {
@@ -370,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +491,64 @@
     "        lin = np.polyfit(x, y, 1)\n",
     "        SLOPES_ACTIVE[key].append(-lin[0])\n",
     "        ge.scatter(x, y, color=color, ax=ax, no_set=True)\n",
-    "        ge.plot(x, np.polyval(lin, x), color=color, ax=ax, no_set=True)"
+    "        ge.plot(x, np.polyval(lin, x), color=color, ax=ax, no_set=True)\n",
+    "for key in GAIN_ACTIVE:\n",
+    "    GAIN_ACTIVE[key] = np.array(GAIN_ACTIVE[key])\n",
+    "for key in SLOPES_ACTIVE:\n",
+    "    SLOPES_ACTIVE[key] = np.array(SLOPES_ACTIVE[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L4\n",
+      " 1st sample: mean+/-s.e.m.= 0.0001+/-0.0002 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 0.0509+/-0.0078 (n=10)\n",
+      "Wilcoxon: p=2.0e-03\n",
+      "\n",
+      "L23 vs L4\n",
+      " 1st sample: mean+/-s.e.m.= 0.0166+/-0.0166 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 0.0509+/-0.0078 (n=10)\n",
+      "Wilcoxon: p=2.0e-03\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import wilcoxon\n",
+    "GAIN_ACTIVE['ampa'][~np.isfinite(GAIN_ACTIVE['ampa'])] = 0\n",
+    "GAIN_ACTIVE['free'][~np.isfinite(GAIN_ACTIVE['free'])] = 0\n",
+    "print('L4\\n', stat_results(np.array(GAIN_ACTIVE['ampa']), np.array(GAIN_ACTIVE['chelated'])))\n",
+    "print('L23 vs L4\\n', stat_results(np.array(GAIN_ACTIVE['free']), np.array(GAIN_ACTIVE['chelated'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L23 vs L4\n",
+      " 1st sample: mean+/-s.e.m.= 0.3600+/-0.3774 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 1.5200+/-0.2040 (n=10)\n",
+      "Wilcoxon: p=2.0e-03\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import wilcoxon\n",
+    "SLOPES_ACTIVE['free'][~np.isfinite(SLOPES_ACTIVE['free'])] = 0\n",
+    "print('L23 vs L4\\n', stat_results(np.array(SLOPES_ACTIVE['free']), np.array(SLOPES_ACTIVE['chelated'])))"
    ]
   },
   {
@@ -564,6 +657,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L4\n",
+      " 1st sample: mean+/-s.e.m.= 0.0001+/-0.0002 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 0.0509+/-0.0078 (n=10)\n",
+      "Wilcoxon: p=2.0e-03\n",
+      "\n",
+      "L23 vs L4\n",
+      " 1st sample: mean+/-s.e.m.= 0.0166+/-0.0166 (n=10)\n",
+      "2ndp sample: mean+/-s.e.m.= 0.0509+/-0.0078 (n=10)\n",
+      "Wilcoxon: p=2.0e-03\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import wilcoxon\n",
+    "GAIN_ACTIVE['ampa'][~np.isfinite(GAIN_ACTIVE['ampa'])] = 0\n",
+    "GAIN_ACTIVE['free'][~np.isfinite(GAIN_ACTIVE['free'])] = 0\n",
+    "print('L4\\n', stat_results(np.array(GAIN_ACTIVE['ampa']), np.array(GAIN_ACTIVE['chelated'])))\n",
+    "print('L23 vs L4\\n', stat_results(np.array(GAIN_ACTIVE['free']), np.array(GAIN_ACTIVE['chelated'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [
@@ -602,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -645,53 +768,6 @@
     "print('AMPA vs L23\\n', stat_results(1e3*np.array(GAIN_ACTIVE['ampa']), 1e3*np.array(GAIN_ACTIVE['free'])))\n",
     "print('L23 vs L4\\n', stat_results(GAIN_ACTIVE['free'][np.isfinite(GAIN_ACTIVE['free'])],\n",
     "                                  GAIN_ACTIVE['chelated'][np.isfinite(GAIN_ACTIVE['free'])]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WilcoxonResult(statistic=0.0, pvalue=0.001953125)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wilcoxon(np.random.randn(10), 10+np.random.randn(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Passive -> WilcoxonResult(statistic=0.0, pvalue=0.001953125)\n",
-      "Active -> WilcoxonResult(statistic=0.0, pvalue=0.001953125)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from scipy.stats import wilcoxon\n",
-    "print('Passive ->', wilcoxon(SLOPES_PASSIVE['free'], SLOPES_PASSIVE['chelated']))\n",
-    "print('Active ->', wilcoxon(SLOPES_ACTIVE['free'], SLOPES_ACTIVE['chelated']))"
    ]
   },
   {
