--- a/Multi-Input-Integration.ipynb
+++ b/Multi-Input-Integration.ipynb
@@ -436,36 +436,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "interstims (ms):  [ 15.          22.14624033  32.69706405  48.27446923  71.27319982\n",
+      " 105.22889415 155.3616253  229.37839278 338.65793419 500.        ]\n",
+      "nsyns: (ms) [ 5  7  9 11 13 15 17 19 21]\n"
+     ]
+    }
+   ],
    "source": [
-    "interstims = np.logspace(np.log10(30), np.log10(300), 6)\n",
-    "nsyns = 5+np.arange(7)*3\n",
+    "interstims = np.logspace(np.log10(15), np.log10(500), 10)\n",
+    "nsyns = 5+np.arange(9)*2\n",
     "\n",
     "delta_Vm = np.zeros((len(interstims), len(nsyns)))\n",
-    "\n"
+    "print('interstims (ms): ', interstims)\n",
+    "print('nsyns: (ms)', nsyns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "interstims = np.logspace(np.log10(30), np.log10(300), 6)\n",
-    "nsyns = 5+np.arange(7)*3\n",
-    "\n",
-    "delta_Vm = np.zeros((len(interstims), len(nsyns)))\n",
-    "\n",
-    "\n",
-    "\n",
     "iloc = 6\n",
     "active = False\n",
     "\n",
-    "nlocs = 5 # len(LOCs)\n",
+    "nlocs = len(LOCs)\n",
     "\n",
     "for iloc in range(len(LOCs))[:nlocs]:\n",
+    "    if iloc%5==0:\n",
+    "        print('loc #%i / %i' % (iloc, len(LOCs)))\n",
     "    for i, DT in enumerate(interstims):\n",
     "        for j, nsyn in enumerate(nsyns):\n",
     "            syn_packets=[{'loc':iloc, 'nsyn':nsyn, 'label':'1'}]\n",
@@ -478,6 +484,15 @@
     "                                  chelated=True, active=active)\n",
     "\n",
     "            delta_Vm[i,j] += (np.max(data_chelatedZn['Vm_soma'])-np.max(data_freeZn['Vm_soma']))/nlocs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('delta_Vm.npy', delta_Vm)"
    ]
   },
   {
@@ -1921,7 +1936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   },
   "name": "Multi-Input-Integration.ipynb"
  },
